react-app/src/components/FriendsList/FriendsList.css
@font-face {
  font-family: "ByteBud";
  src: url("../../static/ggsans-Normal.ttf");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Discord Thin";
  src: url("../../static/Uni\ Sans\ Thin.otf");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Discord Bold";
  src: url("../../static/Uni\ Sans\ Heavy.otf");
  font-weight: normal;
  font-style: normal;
}

.friendslist-header-friends {
  font-size: 30px;
}

.friendslist-container {
  display: flex;
  flex-direction: column;
  height: 800px;
  /* margin-top: auto;
  margin-bottom:auto; */
  margin-left: auto;
  width: 1500px;
  /* width: 100%;
  height: 100%; */
  background-color: rgb(49, 51, 56);
  left: 20px;
  position: fixed;
  top: 0px;
  left: 298px;
  right: 0px;
  bottom: 0px;
}

.friendslist-header-container {
  display: flex;
  align-items: center;
  border-bottom: 0.5px rgb(38, 39, 43) solid;
  height: 50px;
}

.friendslist-user-container {
  align-content: center;
  width: 100%;
  float: left;
  height: 50px;
  /* margin-top: 10px; */
  padding-top: 3px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  align-items: center;
  border-bottom: thin rgb(57, 59, 65) solid;
  cursor: pointer;
}

.friendslist-user-container:hover {
  background-color: rgb(57, 59, 65);
  border-radius: 10px;
}

.friendslist-user-container-1 {
  border-bottom: thin rgb(57, 59, 65) solid;
  margin-left: 20px;
  padding-top: 10px;
  height: 30px;
  color: rgb(179, 184, 191);
  font-family: "ByteBud";
}

.friendslist-friends,
.friendslist-all,
.friendslist-username .friendslist-online,
.friendslist-tag {
  margin-left: 20px;
  font-family: "ByteBud";
  color: rgb(238, 239, 242);
}

.friendslist-friends {
  font-size: 16px;
  font-weight: bolder;
  margin-left: 10px;
  padding-top: 5px;
  padding-right: 10px;
  border-right: thin rgb(57, 59, 65) solid;
}

.friendslist-online {
  margin-left: 25px;
  font-size: 16px;
  font-weight: bolder;
  margin-top: 4px;
  text-align: center;
  border-radius: 8px;
  width: auto;
  padding: 5px;
  background-color: rgb(66, 68, 74);
}

.friendslist-all {
  margin-left: 25px;
  margin-top: 4px;
  font-size: 16px;
  font-weight: bolder;
  text-align: center;
  border-radius: 8px;
  width: 45px;
  background-color: rgb(66, 68, 74);
}
.friendslist-all:hover {
  border-radius: 8px;
  background-color: rgb(66, 68, 74);
  cursor: pointer;
}

.friendslist-profile-image {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  overflow: hidden;
  margin-left: 20px;
  /* margin-bottom: 1em; */

  transition: color 0.15s ease-out, background-color 0.15s ease-out,
    border-radius 0.15s ease-out;
  transition-property: color, background-color, border-radius;
  transition-duration: 0.15s, 0.15s, 0.15s;
  transition-timing-function: ease-out, ease-out, ease-out;
  transition-delay: 0s, 0s, 0s;
}

/*
.friendslist-profile-image img {
  width: 100%;
  height: 100%;
  object-fit: cover;
} */

.friendslist-username {
  margin-left: 10px;
}

.friendslist-header-container i {
  color: rgb(238, 239, 242);
  margin-left: 20px;
  font-size: 16px;
  font-weight: bolder;
  margin-top: 4px;
}

.friendslist-user-container i {
  color: rgb(181, 186, 193);
  padding: 10px;
}

.friendslist-user-container {
  display: flex;
  flex-direction: row;
  /* margin-right: 10px; */
}

.friendslist-chat-icon {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-right: 10px;
}

.friendslist-chat-icon div {
  background-color: rgb(43, 45, 49);
  border-radius: 30px;
  text-align: center;
  margin-right: 5px;
  margin-left: 5px;
  width: 40px;
}

.fa-solid:hover {
  color: rgb(238, 239, 242);
}

.fa-face-smile-beam,
.fa-plus {
  color: rgb(238, 239, 242);
}

.fa-face-smile-beam {
  font-size: 20px;
}

.fa-plus {
  font-size: 10px;
}

.addreaction-container {
  cursor: pointer;
}

.addreaction-container:hover {
  background-color: rgb(43, 45, 49);
  width: 30px;
  padding: 5px;
  border-radius: 10px;
}

.friendslist-online:hover,
.friendslist-friends:hover {
  cursor: default;
}

.friendslist-channel-container {
  position: fixed;
  top: 0;
  left: 68px;
  width: 230px;
  height: 100%;
  background-color: rgb(43, 45, 49);
}

.friendslist-channel-item {
  font-family: "ByteBud";
  color: rgb(242, 243, 245);
  font-size: 15px;
  margin-top: 3px;
}

.friendslist-channel-friendscontainer {
  display: flex;
  flex-direction: row;
  /* margin-left: 20px; */
  margin-left: 5px;
  margin-top: 15px;
  margin-right: 5px;
  margin-bottom: 25px;
  padding-top: 10px;
  padding-left: 10px;
  height: 35px;
  background-color: rgb(63, 66, 72);
  border-radius: 5px;
  /* align-items: center; */
}

.friendslist-channel-friendscontainer > i {
  color: rgb(242, 243, 245);
  font-size: 17px;
  margin-top: 3px;
  margin-right: 10px;
  margin-left: 5px;
}

.friendslist-search-div {
  height: 50px;
  border-bottom: 0.5px rgb(30, 32, 36) solid;
}

#friendslist-search {
  width: 200px;
  margin-left: 10px;
  margin-top: 15px;
  background-color: rgb(30, 32, 34);
  font-family: "ByteBud";
  color: rgb(238, 239, 242);
  border-radius: 3px;
  border: none;
  height: 25px;
}

#friendslist-search::placeholder {
  padding-left: 5px;
  text-align: left;
}

.friendslist-channel-dm,
.friendslist-channel-plus {
  font-family: "ByteBud";
  font-size: 15px;
  margin-left: 15px;
  color: rgb(146, 153, 162);
}

.friendslist-channel-dm-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.fa-plus {
  color: rgb(181, 186, 193);
  margin-right: 15px;
}

.friendslist-tag {
  display: none;
}

.friendslist-user-container:hover .friendslist-tag {
  display: block;
  margin-left: 3px;
  color: rgb(181, 186, 193);
}

.icon-hover > i:hover {
  color: rgb(212, 218, 227);
}

.friendslist-channel-dm-container > i:hover {
  color: rgb(212, 218, 227);
  cursor: pointer;
}

